logo image and text presentation complete

--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='stylesheet' type='text/css' href='./assets/css/style.css'>
-  <title>Better Weather Dashboard</title>
-</head>
-<body>
-  
-</body>
+<html lang='en'>
+	<head>
+		<meta charset='UTF-8' />
+		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
+		<link rel='stylesheet' type='text/css' href='./assets/css/style.css' />
+		<link rel='icon' href='./assets/images/hot-pot.png' type='image/png' />
+		<link rel='preconnect' href='https://fonts.googleapis.com' />
+		<link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
+		<link
+			href='https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap'
+			rel='stylesheet'
+		/>
+		<script src='./assets/js/script.js'></script>
+		<title>mealhub</title>
+	</head>
+
+	<body>
+		<main>
+			<div class='logo-text'>
+				<img class='logo-img' src='./assets/images/hot-pot.png' alt='a logo featuring a tasty korean hot-pot'>
+				<h1 class='chakra light-text'>mealhub!</h1>
+			</div>
+			<section class='actions'>
+				<button>Search for a meal</button>
+				<button>Random meal</button>
+			</section>
+			<section>
+
+			</section>
+		</main>
+	</body>
 </html>
