home - responsive card layout, bg styling

--- a/index.html
+++ b/index.html
@@ -14,19 +14,44 @@
 		<script src='./assets/js/script.js'></script>
 		<title>mealhub</title>
 	</head>
-
 	<body>
+		<div class='overlay-container'></div>
 		<main>
 			<div class='logo-text'>
 				<img class='logo-img' src='./assets/images/hot-pot.png' alt='a logo featuring a tasty korean hot-pot'>
 				<h1 class='chakra light-text'>mealhub!</h1>
 			</div>
 			<section class='actions'>
-				<button>Search for a meal</button>
-				<button>Random meal</button>
+				<div class='card'>
+					<h2 class='card-header chakra'>Search for a meal</h2>
+					<p class='card-text'>
+						Know what you're looking for? Search for a meal by name.
+					</p>
+					<button class='card-btn'>OK!</button>
+				</div>
+				<div class='card'>
+					<h2 class='card-header chakra'>Pick a random meal</h2>
+					<p class='card-text'>
+						We'll give you a random meal to try out.
+					</p>
+					<button class='card-btn'>OK!</button>
+				</div>
+				<div class='card'>
+					<h2 class='card-header chakra'>See all categories</h2>
+					<p class='card-text'>
+						See meals by category.
+					</p>
+					<button class='card-btn'>OK!</button>
+				</div>
+				<div class='card'>
+					<h2 class='card-header chakra'>See meals by origin</h2>
+					<p class='card-text'>
+						Search for a meal by its country of origin.
+					</p>
+					<button class='card-btn'>OK!</button>
+				</div>
 			</section>
 			<section>
-
 			</section>
 		</main>
 	</body>
