minor style edits

--- a/index.html
+++ b/index.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 	<head>
-		<meta charset='UTF-8' />
-		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
-		<link rel='stylesheet' type='text/css' href='./assets/css/style.css' />
-		<link rel='icon' href='./assets/images/hot-pot.png' type='image/png' />
-		<link rel='preconnect' href='https://fonts.googleapis.com' />
-		<link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+		<link rel="icon" href="./assets/images/hot-pot.png" type="image/png" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href='https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap'
-			rel='stylesheet'
+			href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap"
+			rel="stylesheet"
 		/>
-		<script src='./assets/js/script.js'></script>
+		<script src="./assets/js/script.js"></script>
 		<title>mealhub</title>
 	</head>
 	<body>
-		<div class='overlay-container'></div>
+		<div class="overlay-container"></div>
 		<main>
-			<div class='logo-text'>
-				<img class='logo-img' src='./assets/images/hot-pot.png' alt='a logo featuring a tasty korean hot-pot'>
-				<h1 class='chakra light-text'>mealhub!</h1>
+			<div class="logo-text">
+				<img
+					class="logo-img"
+					src="./assets/images/hot-pot.png"
+					alt="a logo featuring a tasty korean hot-pot"
+				/>
+				<h1 class="chakra light-text">mealhub!</h1>
 			</div>
-			<section class='actions'>
-				<div class='card'>
-					<h2 class='card-header chakra'>Search for a meal</h2>
-					<p class='card-text'>
+			<section class="hero chakra light-text">
+				<h2>Discover Your Next Favorite Meal</h2>
+				<p>
+					Browse, search, or get inspired by our collection of global recipes.
+				</p>
+			</section>
+			<section class="actions">
+				<div class="card">
+					<h2 class="card-header chakra">Search for a meal</h2>
+					<p class="card-text">
 						Know what you're looking for? Search for a meal by name.
 					</p>
-					<button class='card-btn'>OK!</button>
+					<button class="card-btn">OK!</button>
 				</div>
-				<div class='card'>
-					<h2 class='card-header chakra'>Pick a random meal</h2>
-					<p class='card-text'>
-						We'll give you a random meal to try out.
-					</p>
-					<button class='card-btn'>OK!</button>
+				<div class="card">
+					<h2 class="card-header chakra">Pick a random meal</h2>
+					<p class="card-text">We'll give you a random meal to try out.</p>
+					<button class="card-btn">OK!</button>
 				</div>
-				<div class='card'>
-					<h2 class='card-header chakra'>See all categories</h2>
-					<p class='card-text'>
-						See meals by category.
-					</p>
-					<button class='card-btn'>OK!</button>
+				<div class="card">
+					<h2 class="card-header chakra">See all categories</h2>
+					<p class="card-text">See meals by category.</p>
+					<button class="card-btn">OK!</button>
 				</div>
-				<div class='card'>
-					<h2 class='card-header chakra'>See meals by origin</h2>
-					<p class='card-text'>
-						Search for a meal by its country of origin.
-					</p>
-					<button class='card-btn'>OK!</button>
+				<div class="card">
+					<h2 class="card-header chakra">See meals by origin</h2>
+					<p class="card-text">Search for a meal by its country of origin.</p>
+					<button class="card-btn">OK!</button>
 				</div>
 			</section>
-			<section>
-			</section>
+			<section></section>
 		</main>
 	</body>
 </html>
